--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-minifier",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "(WIP) the minifier",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
