--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint index.js"
+    "lint": "npx eslint index.js",
+    "test": "npx jest --coverage"
+  },
+  "bin": {
+    "the-minifier": "bin/minifier"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^14.0.1"
   },
   "dependencies": {
+    "jest": "^28.0.2",
     "pino": "^7.11.0"
   }
 }
