--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "(WIP) the minifier",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint index.js",
     "test": "npx jest --collectCoverage"
   },
@@ -21,6 +20,9 @@
     "prettier-eslint": "^14.0.1"
   },
   "dependencies": {
+    "command-line-args": "^5.2.1",
+    "command-line-usage": "^6.1.3",
+    "directory-tree": "^3.2.2",
     "jest": "^28.0.2",
     "pino": "^7.11.0"
   }
