--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-minifier",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A light library to minify css easily",
   "keywords": ["minify", "css"],
   "main": "index.js",
@@ -26,13 +26,13 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^14.0.1"
+    "prettier-eslint": "^14.0.1",
+    "jest": "^28.0.2"
   },
   "dependencies": {
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.3",
     "directory-tree": "^3.2.2",
-    "jest": "^28.0.2",
     "pino": "^7.11.0"
   }
 }
