--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint index.js",
-    "test": "npx jest --collectCoverage"
+    "test": "npx jest --collectCoverage",
+    "coverage": "npx jest --collect-coverage"
   },
   "bin": {
     "the-minifier": "bin/minifier"
