--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,26 +16,26 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm test
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm test
 
-  coverage:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-    - uses: paambaati/codeclimate-action@v3.0.0
-    - name: Test & publish code coverage
-    env:
-      CC_TEST_REPORTER_ID: <code_climate_reporter_id>
-    with:
-      coverageCommand: npm run coverage
-      debug: true
+  # coverage:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       node-version: [16.x]
+  #   steps:
+  #   - uses: paambaati/codeclimate-action@v3.0.0
+  #   - name: Test & publish code coverage
+  #   env:
+  #     CC_TEST_REPORTER_ID: <code_climate_reporter_id>
+  #   with:
+  #     coverageCommand: npm run coverage
+  #     debug: true
 
