--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,12 +30,12 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-    # steps:
-    # - uses: paambaati/codeclimate-action@v3.0.0
-    # - name: Test & publish code coverage
-    # env:
-    #   CC_TEST_REPORTER_ID: <code_climate_reporter_id>
-    # with:
-    #   coverageCommand: npm run coverage
-    #   debug: true
+    steps:
+      - uses: paambaati/codeclimate-action@v3.0.0
+      - name: Test & publish code coverage
+    env:
+      CC_TEST_REPORTER_ID: <code_climate_reporter_id>
+    with:
+      coverageCommand: npm run coverage
+      debug: true
 
