--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,18 +24,26 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm test
-
-  coverage:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
     steps:
-      - uses: paambaati/codeclimate-action@v3.0.0
       - name: Test & publish code coverage
-    env:
-      CC_TEST_REPORTER_ID: <code_climate_reporter_id>
-    with:
-      coverageCommand: npm run coverage
-      debug: true
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: b8fd8d4688920196c32a5cd9512e2c9f4d0ca6807a126f8a63c7155d12c511e2
+      with:
+        coverageCommand: npm run coverage
+        debug: true
+
+  # coverage:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       node-version: [16.x]
+  #   steps:
+  #     - uses: paambaati/codeclimate-action@v3.0.0
+  #     - name: Test & publish code coverage
+  #   env:
+  #     CC_TEST_REPORTER_ID: <code_climate_reporter_id>
+  #   with:
+  #     coverageCommand: npm run coverage
+  #     debug: true
 
