ci: update github workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,26 +22,22 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-        uses: paambaati/codeclimate-action@v3.0.0
-        env:
-          CC_TEST_REPORTER_ID: b8fd8d4688920196c32a5cd9512e2c9f4d0ca6807a126f8a63c7155d12c511e2
-        with:
-          coverageCommand: npm run coverage
-          debug: true
       - run: npm ci
       - run: npm test
-
-  # coverage:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       node-version: [16.x]
-  #   steps:
-  #     - uses: paambaati/codeclimate-action@v3.0.0
-  #     - name: Test & publish code coverage
-  #   env:
-  #     CC_TEST_REPORTER_ID: <code_climate_reporter_id>
-  #   with:
-  #     coverageCommand: npm run coverage
-  #     debug: true
+    
+  coverage:
+    needs: [ test ]
+    name: coverage
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: [16.x]
+    - run: npm test
+    - uses: paambaati/codeclimate-action@v2.2.4
+      env:
+        CC_TEST_REPORTER_ID: b8fd8d4688920196c32a5cd9512e2c9f4d0ca6807a126f8a63c7155d12c511e2
+      with:
+        coverageCommand: npm run coverage
 
