ci: update github workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
-        node-version: [16.x]
+        node-version: '12'
     - run: npm test
     - uses: paambaati/codeclimate-action@v2.2.4
       env:
