ci: update github workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: actions/setup-node@master
       with:
         node-version: '12'
+      - run: npm install
     - uses: paambaati/codeclimate-action@v3.0.0
       env:
         CC_TEST_REPORTER_ID: <code_climate_reporter_id>
