ci(publisher): add command to publisher

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
         - run: echo 'plop'
+        - run: echo ${{ secrets.NPM_TOKEN }}
       # - run: npm ci
       # - run: npm publish
       #   env:
