feat: create js minifier

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": ["minify", "css"],
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint index.js",
+    "lint": "npx eslint *.js src/*.js bin/*.js",
     "test": "npx jest --collectCoverage",
     "coverage": "npx jest --collect-coverage"
   },
