--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,7 +42,7 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: b8fd8d4688920196c32a5cd9512e2c9f4d0ca6807a126f8a63c7155d12c511e2
       with:
-        coverageCommand: npm run coverage
+        coverageCommand: npm test
         debug: true
   publish:
     needs: [ coverage ]
