--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,9 +28,19 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+  lint:
+    needs: [ test ]
+    name: lint
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
     - run: npm lint
   coverage:
-    needs: [ test ]
+    needs: [ lint ]
     name: coverage
     runs-on: ubuntu-latest
     steps:
